# camera_lidar_clustering

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml
include/cam_lidar_bb_regression_cuda/: Matmul_kernels.hpp  MinimalBoundingBox.hpp  classic_nms.hpp  cuda_utils.hpp  get_pointsInsideBbs_kernels.hpp  node.hpp  open3d_conversions.hpp  utils.hpp
include/camera_lidar_clustering/: Matmul_kernels.hpp  classic_nms.hpp  get_pointsInsideBbs_kernels.hpp  node.hpp  open3d_conversions.hpp  utils.hpp
launch/: camera_lidar_clustering_launch.py  negate_tilt_launch.py
src/: Matmul_kernels.cu  MinimalBoundingBox.cpp  classic_nms.cpp  get_pointsInsideBbs_kernels.cu  node.cpp  open3d_conversions.cpp
utils/: utils.cpp
